jipsy-tests/src/test/resources/invalid/NoExtentionTestClass.java
import java.util.ArrayList;

import org.kordamp.jipsy.ServiceProviderFor;

@ServiceProviderFor(ArrayList.class)
public class NoExtentionTestClass {
}
